<resources>
    <string name="app_name">AfroFitness</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="select_gender">Select Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="workout_sessions">Workout Sessions</string>
    <string name="instructors">Instructors</string>
    <string name="logout">Logout</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="preferred_workout_location">Preferred Workout Location</string>
    <string name="weight_kg">Weight(kg)</string>
    <string name="target_weight_kg">Target Weight(kg)</string>
    <string name="update_profile">Update Profile</string>
    <string name="title_activity_maps">Map</string>
    <string name="add_workout">Add Workout</string>
    <string name="exercise_type">Exercise Type</string>
    <string name="adding_workout_session">Adding workout session...</string>
    <string name="cancel">Cancel</string>
    <string name="location">Location</string>
    <string name="reps" translatable="false">reps</string>
    <string name="sets" translatable="false">sets</string>
    <string name="date">Date</string>
    <string name="name">Name</string>
    <string name="phone_no">Phone Number</string>
    <string name="updating" translatable="false">Updating</string>
    <string name="date_format">Date (YYYY-MM-DD Format)</string>
    <string name="number_of_reps">Number of Reps</string>
    <string name="number_of_sets">Number of sets</string>
</resources>
